<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".multiscreen"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">



<android.support.design.widget.TextInputLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toStartOf="@+id/clearPassword"
    android:layout_toLeftOf="@+id/clearPassword"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:id="@+id/passEditWrap"
    android:elevation="10dp"
    android:layout_alignParentTop="true">
        <EditText
            android:id="@+id/passEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:maxLength="500"/>
</android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/messageEditWrap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:layout_below="@+id/passEditWrap"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/clearMessage"
            android:layout_toStartOf="@+id/clearMessage">
            <EditText
                android:id="@+id/messageEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_hint"
                android:inputType="text"
                android:lines="1"
                android:maxLength="8000"
                android:maxLines="2"
                />
        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/decodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:elevation="10dp"
            android:enabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:longClickable="true"
            android:text="@string/decode_text"
            android:layout_alignTop="@+id/encodeButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:typeface="normal"
            android:layout_below="@+id/decodeButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/messageOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:selectAllOnFocus="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="true"
            android:typeface="normal"
            android:layout_below="@+id/textHint"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/clearMessage"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:elevation="10dp"
            android:enabled="true"
            android:onClick="clearMessage"
            android:singleLine="true"
            android:text="@string/clear_text"
            android:layout_alignBottom="@+id/messageEditWrap"
            android:layout_alignRight="@+id/decodeButton"
            android:layout_alignEnd="@+id/decodeButton" />


        <Button
            android:id="@+id/clearPassword"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:clickable="true"
            android:elevation="10dp"
            android:enabled="true"
            android:onClick="clearPassword"
            android:singleLine="true"
            android:text="@string/clear_text"
            android:layout_above="@+id/messageEditWrap"
            android:layout_toRightOf="@+id/messageEditWrap"
            android:layout_toEndOf="@+id/messageEditWrap" />


        <Button
            android:id="@+id/encodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:elevation="10dp"
            android:enabled="true"
            android:onClick="message_encode"
            android:text="@string/encode_text"
            android:layout_below="@+id/messageEditWrap"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


</RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
